# OpenGL-Basics

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: main.cpp
